# dio-commercial-agent

./: .gitignore  agent_example.py  docker-compose.yml  main.py  pyproject.toml
src/dio_commercial_agent/: app.py  base.py  constants.py  ioc.py  router.py  schemas.py  settings.py  socket.py
src/dio_commercial_agent/agentic/: multi_agentic.py  orchestrator.py
src/dio_commercial_agent/agentic/agents/: base.py  templates.py  utils.py
src/dio_commercial_agent/agentic/agents/rag/: __init__.py  nodes.py  state.py  workflow.py
src/dio_commercial_agent/agentic/agents/supervisor/: __init__.py  nodes.py  state.py  workflow.py
src/dio_commercial_agent/api/: __init__.py  app.py  router.py  socket.py
src/dio_commercial_agent/core/: base.py
src/dio_commercial_agent/infrastructure/: vector_store.py
src/dio_commercial_agent/infrastructure/checkpointers/redis/: constants.py  utils.py
src/dio_commercial_agent/infrastructure/connection_managers/: __init__.py  base.py  in_memory.py
src/dio_commercial_agent/infrastructure/database/: models.py  repositories.py  session.py
src/dio_commercial_agent/infrastructure/llms/yandex_gpt/: api.py  chat_model.py
src/dio_commercial_agent/infrastructure/websockets/: __init__.py
